manifests/initrd-http/charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: initrd-http
  namespace: ems1
spec:
  selector:
    matchLabels:
      app: initrd-http
  template:
    metadata:
      labels:
        app: initrd-http
    spec:
      nodeSelector:
        compass-ci.io/node-role: master
      containers:
      - name: initrd-http
        image: initrd-http:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 5
          failureThreshold: 3
        resources:
          requests:
            memory: 10Mi
          limits:
            memory: 15Gi
        securityContext:
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: var-cache
          mountPath: /var/cache/nginx
        - name: var-run
          mountPath: /var/run
        - name: initrd
          mountPath: /usr/share/nginx/html/initrd
        - name: kernel
          mountPath: /usr/share/nginx/html/kernel
        - name: upload-files
          mountPath: /usr/share/nginx/html/upload-files
        - name: cci
          mountPath: /usr/share/nginx/html/cci
        - name: localtime
          mountPath: /etc/localtime
          subPath: localtime
      volumes:
      - name: localtime
        configMap:
          name: localtime
      - name: var-cache
        emptyDir: {}
      - name: var-run
        emptyDir: {}
      - name: initrd
        hostPath:
          path: /srv/initrd
      - name: kernel
        hostPath:
          path: /srv/kernel
      - name: upload-files
        hostPath:
          path: /srv/upload-files
      - name: cci
        hostPath:
          path: /srv/cci
